# learning-projects

./: .gitignore  LICENSE  NotepadSystem.py  README.md  mangadex_dl.py  notepad.py
c/: .clang-format  .clangd
c/my_vector/: main.c  my_vector.c  my_vector.h  my_vector_tests.c
cpp/: .clang-format  .clangd
cpp/basicExpressionParser/: basicExpressionParser.cpp
cpp/builds/: basicExpressionParser  main  mightFinishLater  unit8_q3
cpp/learncpp/: unit16_q5.cpp  unit17_q2.cpp  unit8_q3.cpp
cpp/learncpp/unit24_q3/: Creature.hpp  Monster.cpp  Monster.hpp  Player.cpp  Player.hpp  Random.hpp  main.cpp
cpp/matrix_things/: main  main.cpp
mangadex_dl/: README.md  mangadex_dl.py
note_app/: NotepadSystem.py
python/: pyrightconfig.json  requirements.txt
python/mangadex-dl/: README.md  mangadex-dl.py
python/mangadex_dl/: README.md
python/mdex_dl/: README.md  __init__.py  config.toml  load_config.py  logger.py  main.py  models.py  utils.py
python/mdex_dl/api/: client.py  download.py  http_config.py  pagination.py  search.py  search_session.py  utils.py
python/mdex_dl/cli/: getch.py  menus.py  utils.py
python/mdex_dl/cli/ansi/: output.py  text_styles.py
python/mdex_dl/cli/controls/: __init__.py  classes.py  constants.py
python/mdex_tool/: README.md  config.toml  errors.py  load_config.py  logger.py  main.py  requirements.txt
python/mdex_tool/api/: __init__.py  client.py  download.py  http_config.py  pagination.py  search.py
python/mdex_tool/cli/: menus.py  utils.py
python/mdex_tool/cli/ansi/: __init__.py  fg_colors.py  output.py
python/mdex_tool/cli/controls/: __init__.py  classes.py  constants.py
python/note_app/: README.md  notepad.py
python/notepad/: NotepadSystem.py  README.md  main.py  notepad.py  notepad_system.py
rust/: Cargo.toml
rust/crates/guessing_game/: Cargo.toml
rust/crates/rust_mdex_dl/: Cargo.toml  config.toml
rust/crates/rust_mdex_dl/src/: client.rs  config.rs  deserialize_custom.rs  deserializers.rs  downloader.rs  errors.rs  lib.rs  logging.rs  main.rs  paths.rs
rust/crates/rust_mdex_dl/src/api/: client.rs  download.rs  downloader.rs  endpoints.rs  mod.rs  models.rs  search.rs
rust/crates/selection_parsing/: Cargo.toml
rust/crates/selection_parsing/src/: main.rs
rust/rust_mdex_dl/: Cargo.toml  README.md  config_rust_mdex_dl.toml
rust/rust_mdex_dl/src/: deserializers.rs  errors.rs  paths.rs
rust/rust_mdex_dl/src/api/: client.rs  download.rs  endpoints.rs  mod.rs  models.rs  search.rs
rust/selection_parsing/src/: parse_selection_err.rs
