[package]
name = "rust_mdex_dl"
version = "0.1.0"
edition = "2024"
authors = ["hachispin"]
license = "MIT"
repository = "https://github.com/hachispin/learning-projects/tree/main/rust/crates/rust_mdex_dl"

[dependencies]
bytes = "1.10.1"
chrono = "0.4.42"
console = "0.16.1"
dialoguer = "0.12.0"
futures = "0.3.31"
indicatif = "0.18.0"
isolang = { version = "2.4.0", features = ["english_names"] }
log = "0.4.28"
miette = { version = "7.6.0", features = ["fancy"] }
reqwest = "0.13.2"
sanitise-file-name = "1.0.0"
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
serde_urlencoded = "0.7.1"
simplelog = "0.12.2"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["fs", "macros", "rt-multi-thread"] }
toml = "0.9.7"
url = { version = "2.5.8", features = ["serde"] }
uuid = "1.18.1"
