[package]
name = "rust_mdex_dl"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.10.1"
futures = "0.3.31"
futures-util = "0.3.31"
indicatif = "0.18.0"
miette = { version = "7.6.0", features = ["fancy"] }
reqwest = { version = "0.12.23", features = ["json"] }
rustyline = "17.0.1"
serde = "1.0.226"
serde_json = "1.0.145"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
toml = "0.9.7"
uuid = "1.18.1"
