[package]
name = "rust_mdex_dl"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.10.1"
chrono = "0.4.42"
console = "0.16.1"
dialoguer = "0.12.0"
futures = "0.3.31"
indicatif = "0.18.0"
isolang = { version = "2.4.0", features = ["english_names"] }
itertools = "0.14.0"
log = "0.4.28"
miette = { version = "7.6.0", features = ["fancy"] }
reqwest = { version = "0.12.23", features = ["json"] }
sanitise-file-name = "1.0.0"
serde = "1.0.226"
serde_json = "1.0.145"
serde_urlencoded = "0.7.1"
simplelog = "0.12.2"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["fs", "macros", "rt-multi-thread"] }
toml = "0.9.7"
uuid = "1.18.1"
